--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -442,7 +442,7 @@ select {
   font-size: 50px; }
 
 .main-website .content {
-  max-width: 1250px;
+  max-width: 1350px;
   margin: 0 auto; }
 
 .main-website h1, .main-website h2, .main-website h3, .main-website h4, .main-website h5, .main-website h6 {
@@ -454,9 +454,7 @@ select {
 .main-website header nav {
   width: 100%; }
   .main-website header nav ul {
-    max-width: 1250px;
-    margin: 0 auto;
-    padding: 1.2em 5em;
+    padding: 1em 5em;
     width: 100%;
     display: flex;
     justify-content: flex-end; }
@@ -475,20 +473,22 @@ select {
     background-color: #1c2f4d; }
     .main-website header nav.top .phone {
       flex-grow: 1;
-      font-size: 1.20em; }
+      font-size: 1.20em;
+      opacity: 0.98; }
       .main-website header nav.top .phone i {
         font-size: 0.9em; }
     .main-website header nav.top i {
-      font-size: 1.3em; }
+      font-size: 1.1em; }
   .main-website header nav.bottom ul {
-    padding-top: 1em; }
+    padding-top: 1em;
+    align-items: center; }
   .main-website header nav.bottom li {
     display: flex;
     align-items: center;
     flex-direction: row; }
   .main-website header nav.bottom a {
     color: rgba(0, 0, 0, 0.6);
-    font-size: 1.4em;
+    font-size: 1.2em;
     letter-spacing: 0.11em; }
     .main-website header nav.bottom a:hover {
       color: #1c2f4d; }
@@ -502,10 +502,22 @@ select {
       letter-spacing: 0.05em;
       align-items: center; }
     .main-website header nav.bottom .brand img {
-      height: 100px; }
+      height: 70px; }
     .main-website header nav.bottom .brand span {
       margin: 0 0.3em 0;
       display: block; }
+  .main-website header nav.bottom .panel {
+    background: #1c2f4d;
+    border-radius: 15px;
+    padding: 2em 2em;
+    transition: all .2s linear;
+    cursor: pointer;
+    height: 2em; }
+    .main-website header nav.bottom .panel a {
+      color: #fff;
+      font-weight: 700; }
+  .main-website header nav.bottom .panel:hover {
+    background-color: #d7bd73; }
 
 .main-website .hero {
   background-image: url(../assets/hero-bg.png);
@@ -518,9 +530,10 @@ select {
     flex-basis: 50%; }
   .main-website .hero .man {
     position: relative;
-    height: 56.2em; }
+    height: 598px; }
     .main-website .hero .man img {
-      height: 100em; }
+      height: 1047px;
+      width: auto; }
   .main-website .hero .text {
     display: flex;
     flex-direction: column;
@@ -534,16 +547,13 @@ select {
       line-height: 2em; }
 
 .main-website .info {
-  height: 50em;
   background-color: #f0f0f0; }
   .main-website .info .content {
     display: flex;
-    max-width: 1250px;
-    margin: 0 auto;
     justify-content: flex-end; }
     .main-website .info .content .info-lot {
       max-width: 600px;
-      padding: 15em 2em;
+      padding: 11em 2em;
       text-align: center; }
       .main-website .info .content .info-lot h2 {
         font-size: 4em;
@@ -553,10 +563,11 @@ select {
         letter-spacing: .1em; }
 
 .main-website .services {
-  padding: 5em 0 5em;
+  padding: 10em 0 5em;
   text-align: center;
   counter-reset: service-counter; }
   .main-website .services .service-list {
+    padding: 4em 0;
     display: flex;
     flex-wrap: wrap; }
     .main-website .services .service-list .service {
@@ -596,3 +607,129 @@ select {
         font-size: 1.3em;
         max-width: 350px;
         margin: 0 auto; }
+
+.main-website .personality-types {
+  padding: 10em 0 5em;
+  background-color: rgba(240, 240, 240, 0.25); }
+  .main-website .personality-types h2 {
+    text-align: center; }
+  .main-website .personality-types .types-list {
+    padding: 3em;
+    display: flex;
+    flex-wrap: wrap;
+    counter-reset: personality-type-counter; }
+    .main-website .personality-types .types-list .type {
+      flex-basis: 50%;
+      display: flex;
+      height: 350px;
+      margin-bottom: 4em;
+      position: relative;
+      padding: 2em; }
+      .main-website .personality-types .types-list .type .image:before {
+        content: "";
+        position: absolute;
+        border-top: 15px solid transparent;
+        border-bottom: 15px solid transparent;
+        border-right: 15px solid #fff;
+        height: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto; }
+      .main-website .personality-types .types-list .type .image:after {
+        counter-increment: personality-type-counter;
+        content: counter(personality-type-counter, decimal);
+        font-size: 3em;
+        font-weight: 700;
+        margin: auto;
+        position: absolute;
+        left: 10px;
+        top: 10px;
+        background: #fff;
+        height: 80px;
+        width: 80px;
+        line-height: 80px;
+        text-align: center;
+        color: #d7bd73;
+        transition: all .3s linear; }
+      .main-website .personality-types .types-list .type:hover .image:after {
+        background-color: #1c2f4d;
+        border-radius: 50%; }
+      .main-website .personality-types .types-list .type.reverse {
+        flex-direction: row-reverse; }
+        .main-website .personality-types .types-list .type.reverse .image:before {
+          border-left: 15px solid #fff;
+          border-right: 0;
+          right: inherit;
+          left: 0; }
+      .main-website .personality-types .types-list .type .image, .main-website .personality-types .types-list .type .type-text {
+        flex: 1; }
+      .main-website .personality-types .types-list .type .image {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        position: relative; }
+      .main-website .personality-types .types-list .type .image.type1 {
+        background-image: url(../assets/type1.jpg); }
+      .main-website .personality-types .types-list .type .image.type2 {
+        background-image: url(../assets/type2.jpg); }
+      .main-website .personality-types .types-list .type .image.type3 {
+        background-image: url(../assets/type3.jpg); }
+      .main-website .personality-types .types-list .type .image.type4 {
+        background-image: url(../assets/type4.jpg); }
+      .main-website .personality-types .types-list .type .image.type5 {
+        background-image: url(../assets/type5.jpg); }
+      .main-website .personality-types .types-list .type .image.type6 {
+        background-image: url(../assets/type6.jpg); }
+      .main-website .personality-types .types-list .type .image.type7 {
+        background-image: url(../assets/type7.jpg); }
+      .main-website .personality-types .types-list .type .image.type8 {
+        background-image: url(../assets/type8.jpg); }
+      .main-website .personality-types .types-list .type .image.type9 {
+        background-image: url(../assets/type9.jpg); }
+      .main-website .personality-types .types-list .type .type-text {
+        display: flex;
+        flex-direction: column;
+        vertical-align: middle;
+        padding: 2em; }
+        .main-website .personality-types .types-list .type .type-text h3 {
+          font-size: 2em;
+          margin-bottom: 1em; }
+        .main-website .personality-types .types-list .type .type-text p {
+          line-height: 1.6em;
+          font-size: 1.2em;
+          letter-spacing: .05em; }
+
+.main-website .contact {
+  display: flex;
+  width: 100%; }
+  .main-website .contact aside {
+    flex-basis: 50%;
+    color: #fff;
+    background-color: #1c2f4d; }
+    .main-website .contact aside.info-container {
+      padding: 10em 5em;
+      font-size: 1em; }
+    .main-website .contact aside.info-container h3 {
+      font-size: 2.5em;
+      color: #fff;
+      margin-bottom: 1.1em; }
+    .main-website .contact aside.info-container .contact-row {
+      margin-bottom: 1.5em; }
+    .main-website .contact aside.info-container label {
+      font-weight: bold;
+      display: inline-block;
+      width: 100%; }
+    .main-website .contact aside.info-container label, .main-website .contact aside.info-container span {
+      font-size: 1.25em;
+      letter-spacing: .1em; }
+  .main-website .contact aside.map .maps {
+    width: 100%;
+    height: 100%; }
+
+.main-website footer {
+  height: 5em;
+  text-align: center;
+  font-size: 1.2em; }
+  .main-website footer p {
+    line-height: 5em; }
